--- a/index_github.html
+++ b/index_github.html
@@ -3,8 +3,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Resume</title>
-<link type="text/css" rel="stylesheet" href="brown/css/brown.css" />
-<link type="text/css" rel="stylesheet" href="brown/css/print.css" media="print"/>
+<link type="text/css" rel="stylesheet" href="css/brown.css" />
+<link type="text/css" rel="stylesheet" href="css/print.css" media="print"/>
 <!--[if IE 7]>
 <link href="css/ie7.css" rel="stylesheet" type="text/css" />
 <![endif]-->
