--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
     Author: TemplateMag.com
     License: https://templatemag.com/license/
   ======================================================= -->
+  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
 </head>
 
 <body data-spy="scroll" data-offset="64" data-target="#section-topbar">
@@ -217,6 +221,7 @@
     
     <div class="container desc">
       <div class="row">
+        
         <div class="col-lg-2 col-lg-offset-1">
           <h5>PORTFOLIO</h5>
         </div>
@@ -257,6 +262,15 @@
           <a href="https://github.com/maanderz/jungle-rails" title="Jungle">Jungle</a>
           <p>
             <p class="color">A mini e-commerce application built with Rails 4.2 for purposes of teaching Rails by example.<br/><br/></p>
+          </p>
+        </div>
+        <div class="col-lg-6 col-lg-offset-3">
+          <p><img class="img-responsive" height=100px src="img/shot1.png" alt=""></p>
+        </div>
+        <div class="col-lg-3">
+          <a href="https://github.com/ardeliatay/Mindfull-Front/tree/master/Mindfull-Front" title="MindFull">MindFull</a>
+          <p>
+            <p class="color">A recipe search app built with object-recognition to raise awareness of food wastage.<br/><br/></p>
           </p>
         </div>
       </div>
