--- a/index.html
+++ b/index.html
@@ -33,6 +33,23 @@
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
+  <style type="text/css">
+    .carousel{
+        background: #2f4357;
+        margin-top: 20px;
+    }
+    .carousel .item{
+        min-height: 280px; /* Prevent carousel from being distorted if for some reason image doesn't load */
+        max-height: 375px;
+    }
+    .carousel .item img{
+        margin: 0 auto; /* Align slide image horizontally center */
+    }
+    .bs-example{
+      margin: 20px;
+    }
+    </style>
+
 </head>
 
 <body data-spy="scroll" data-offset="64" data-target="#section-topbar">
@@ -214,21 +231,57 @@
   </div>
   <!--/ #skillswrap -->
 
-
-
-  <section id="work" name="work">
+<section id="work" name="work">
     <!--PORTFOLIO DESCRIPTION -->
-    
+     <!--beginning carousel -->
+  <div class="bs-example">
+    <div id="myCarousel" class="carousel slide" data-interval="3000" data-ride="carousel">
+      <!-- Carousel indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
+            <li data-target="#myCarousel" data-slide-to="4"></li>
+        </ol>   
+        <!-- Wrapper for carousel items -->
+        <div class="carousel-inner">
+            <div class="active item">
+                <img src="img/tweeter.png" alt="First Slide">
+            </div>
+            <div class="item">
+                <img src="img/chatty.png" alt="Second Slide">
+            </div>
+            <div class="item">
+                <img src="img/login.png" alt="Third Slide">
+            </div>
+            <div class="item">
+              <img src="img/jungle.png" alt="Fourth Slide">
+            </div>
+            <div class="item">
+              <img src="img/shot5.png" alt="Fourth Slide">
+            </div>
+        </div>
+        <!-- Carousel controls -->
+        <a class="carousel-control left" href="#myCarousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+        <a class="carousel-control right" href="#myCarousel" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+        </a>
+    </div>
+  </div>
+
+  <!--end-->
+
     <div class="container desc">
       <div class="row">
         
         <div class="col-lg-2 col-lg-offset-1">
           <h5>PORTFOLIO</h5>
+          <br/>
         </div>
 
-        <div class="col-lg-6">
-          <p><img class="img-responsive" src="img/tweeter.png" alt=""></p>
-        </div>
         <div class="col-lg-3">
           <a href="https://github.com/maanderz/tweeter" title="Tweeter">Tweeter</a>
           <p>
@@ -236,9 +289,6 @@
           </p>
         </div>
 
-        <div class="col-lg-6 col-lg-offset-3">
-          <p><img class="img-responsive" src="img/chatty.png" alt=""></p>
-        </div>
         <div class="col-lg-3">
           <a href="https://github.com/maanderz/ChattyApp" title="ChattyApp">ChattyApp</a>
           <p>
@@ -246,26 +296,17 @@
           </p>
         </div>
 
-        <div class="col-lg-6 col-lg-offset-3">
-          <p><img class="img-responsive" src="img/login.png" alt=""></p>
-        </div>
         <div class="col-lg-3">
           <a href="https://github.com/maanderz/TinyApp" title="TinyApp">TinyApp</a>
           <p>
             <p class="color">A bit.ly-like URL shortener built with Node and Express.<br/><br/></p>
           </p>
         </div>
-        <div class="col-lg-6 col-lg-offset-3">
-          <p><img class="img-responsive" src="img/jungle.png" alt=""></p>
-        </div>
         <div class="col-lg-3">
           <a href="https://github.com/maanderz/jungle-rails" title="Jungle">Jungle</a>
           <p>
             <p class="color">A mini e-commerce application built with Rails 4.2 for purposes of teaching Rails by example.<br/><br/></p>
           </p>
-        </div>
-        <div class="col-lg-6 col-lg-offset-3">
-          <p><img class="img-responsive" height=100px src="img/shot1.png" alt=""></p>
         </div>
         <div class="col-lg-3">
           <a href="https://github.com/ardeliatay/Mindfull-Front/tree/master/Mindfull-Front" title="MindFull">MindFull</a>
