--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
                     <p class="text-white-75 font-weight-light mb-5">Start Bootstrap can help you build better websites
                         using the Bootstrap framework! Just download a theme and start customizing, no strings attached!
                     </p>
-                    <a class="btn btn-primary btn-xl js-scroll-trigger" id="test" href="#about">Find Out More</a>
+                    <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+
+                    <h2 class="quotes">first quote</h2>
+                    <h2 class="quotes">second quote</h2>
+
                 </div>
             </div>
         </div>
