--- a/index.html
+++ b/index.html
@@ -20,6 +20,27 @@
         rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
+
+    <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script>
+        (function () {
+
+            var quotes = $(".quotes");
+            var quoteIndex = -1;
+
+            function showNextQuote() {
+                ++quoteIndex;
+                quotes.eq(quoteIndex % quotes.length)
+                    .fadeIn(2000)
+                    .delay(2000)
+                    .fadeOut(2000, showNextQuote);
+            }
+
+            showNextQuote();
+
+        })();
+    </script>
+
 </head>
 
 <body id="page-top">
