--- a/index.html
+++ b/index.html
@@ -50,14 +50,9 @@
                     <hr class="divider my-4" />
                 </div>
                 <div class="col-lg-8 align-self-baseline">
-                    <p class="text-white-75 font-weight-light mb-5">Start Bootstrap can help you build better websites
-                        using the Bootstrap framework! Just download a theme and start customizing, no strings attached!
-                    </p>
+                    <p class="quotes text-white-75 font-weight-light mb-5">first quote</p>
+                    <p class="quotes text-white-75 font-weight-light mb-5">second quote</p>
                     <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
-
-                    <h2 class="quotes">first quote</h2>
-                    <h2 class="quotes">second quote</h2>
-
                 </div>
             </div>
         </div>
