--- a/index.html
+++ b/index.html
@@ -45,14 +45,13 @@
         <div class="container h-100">
             <div class="row h-100 align-items-center justify-content-center text-center">
                 <div class="col-lg-10 align-self-end">
-                    <h1 class="text-uppercase text-white font-weight-bold">Your Favorite Source of Free Bootstrap Themes
+                    <h1 class="text-uppercase text-white font-weight-bold">Mandy Arens
                     </h1>
                     <hr class="divider my-4" />
                 </div>
                 <div class="col-lg-8 align-self-baseline">
                     <p class="quotes text-white-75 font-weight-light mb-5">first quote</p>
                     <p class="quotes text-white-75 font-weight-light mb-5">second quote</p>
-                    <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
                 </div>
             </div>
         </div>
