--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             function showNextQuote() {
                 ++quoteIndex;
                 quotes.eq(quoteIndex % quotes.length)
-                    .slideInLeft(2000)
+                    .fadeIn(2000)
                     .delay(2000)
                     .fadeOut(2000, showNextQuote);
             }
