--- a/index.html
+++ b/index.html
@@ -61,12 +61,10 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8 text-center">
-                    <h2 class="text-white mt-0">We've got what you need!</h2>
+                    <h2 class="text-white mt-0">My name is Mandy Arens</h2>
                     <hr class="divider light my-4" />
-                    <p class="text-white-50 mb-4">Start Bootstrap has everything you need to get your new website up and
-                        running in no time! Choose one of our open source, free to download, and easy to use themes! No
-                        strings attached!</p>
-                    <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
+                    <p class="text-white-50 mb-4">I am a web developer who learns quickly.  I've worked on chatbots, React websites, and WordPress websites.  I am keen to gain more experience in the world of technology, therefore I'm looking for a company willing to offer me a placement amongst them.  I would offer my full commitment and be a pleasant and friendly addition to your team in return!</p>
+                    <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Check out my work!</a>
                 </div>
             </div>
         </div>
