--- a/index.html
+++ b/index.html
@@ -193,6 +193,11 @@
                     <!-- Make sure to change the email address in BOTH the anchor text and the link target below!--><a
                         class="d-block" href="https://www.linkedin.com/in/arensmandyk/">LinkedIn</a>
                 </div>
+                <div class="col-lg-4 mr-auto text-center">
+                    <i class="fab fa-github fa-3x mb-3 text-muted"></i>
+                    <!-- Make sure to change the email address in BOTH the anchor text and the link target below!--><a
+                        class="d-block" href="https://github.com/maanderz/">Github</a>
+                </div>
             </div>
         </div>
     </section>
