--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
                         class="d-block" href="https://github.com/maanderz/">Github</a>
                 </div>
             </div>
+            <div> Located in Calgary, Alberta </div>
         </div>
     </section>
     <!-- Footer-->
