added divider to footer

--- a/index.html
+++ b/index.html
@@ -199,7 +199,8 @@
                         class="d-block" href="https://github.com/maanderz/">Github</a>
                 </div>
             </div>
-            <div style="text-align: center; margin-top: 1rem;"> Located in Calgary, Alberta </div>
+            <hr class="divider my-4" />
+            <div style="text-align: center;"> Located in Calgary, Alberta </div>
         </div>
     </section>
     <!-- Footer-->
