--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
     </section>
     <!-- Portfolio-->
     <section id="portfolio">
+        <h2 class="text-center mt-0"> Projects </h2>
+        <hr class="divider my-4" />
         <div class="container-fluid p-0">
             <div class="row no-gutters">
                 <div class="col-lg-4 col-sm-6">
