--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto my-2 my-lg-0">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Services</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#work">Work</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
                 </ul>
@@ -64,13 +64,13 @@
                     <h2 class="text-white mt-0">My name is Mandy Arens</h2>
                     <hr class="divider light my-4" />
                     <p class="text-white-50 mb-4">I am a web developer who learns quickly.  I've worked on chatbots, React websites, and WordPress websites.  I am keen to gain more experience in the world of technology, therefore I'm looking for a company willing to offer me a placement amongst them.  I would offer my full commitment and be a pleasant and friendly addition to your team in return!</p>
-                    <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Check out my work!</a>
+                    <a class="btn btn-light btn-xl js-scroll-trigger" href="#portfolio">Check out my work!</a>
                 </div>
             </div>
         </div>
     </section>
-    <!-- Services-->
-    <section class="page-section" id="services">
+    <!-- Work Experience-->
+    <section class="page-section" id="work">
         <div class="container">
             <h2 class="text-center mt-0">At Your Service</h2>
             <hr class="divider my-4" />
