--- a/index.html
+++ b/index.html
@@ -72,15 +72,12 @@
     <!-- Work Experience-->
     <section class="page-section" id="work">
         <div class="container">
-            <h2 class="text-center mt-0">At Your Service</h2>
+            <h2 class="text-center mt-0">Work Experience</h2>
             <hr class="divider my-4" />
             <div class="row">
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="mt-5">
-                        <i class="fas fa-4x fa-gem text-primary mb-4"></i>
-                        <h3 class="h4 mb-2">Sturdy Themes</h3>
-                        <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
-                    </div>
+                <div>
+                    <h3 className="mb-0"> Frontend Web Developer </h3>
+                    <div className="subheading mb-3">Loomo Marketing</div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
