added first job

--- a/index.html
+++ b/index.html
@@ -46,12 +46,15 @@
                     <hr class="divider my-4" />
                 </div>
                 <div class="col-lg-8 align-self-baseline">
-                    <p class="quotes text-white-75 font-weight-light mb-5">Self-driven, professional, team player, with a strong focus on learning
+                    <p class="quotes text-white-75 font-weight-light mb-5">Self-driven, professional, team player, with
+                        a strong focus on learning
                         new technologies, who adapts quickly in a fast paced environment,
                         and loves solving difficult problems.</p>
-                    <p class="quotes text-white-75 font-weight-light mb-5">I love spending time with my animals, Skylar and Qoo.</p>
+                    <p class="quotes text-white-75 font-weight-light mb-5">I love spending time with my animals, Skylar
+                        and Qoo.</p>
                     <p class="quotes text-white-75 font-weight-light mb-5">Cooking is another passion of mine.</p>
-                    <p class="quotes text-white-75 font-weight-light mb-5">If you can't find me, I'm most likely wandering the vast outdoors.</p>
+                    <p class="quotes text-white-75 font-weight-light mb-5">If you can't find me, I'm most likely
+                        wandering the vast outdoors.</p>
                 </div>
             </div>
         </div>
@@ -63,7 +66,11 @@
                 <div class="col-lg-8 text-center">
                     <h2 class="text-white mt-0">My name is Mandy Arens</h2>
                     <hr class="divider light my-4" />
-                    <p class="text-white-50 mb-4">I am a web developer who learns quickly.  I've worked on chatbots, React websites, and WordPress websites.  I am keen to gain more experience in the world of technology, therefore I'm looking for a company willing to offer me a placement amongst them.  I would offer my full commitment and be a pleasant and friendly addition to your team in return!</p>
+                    <p class="text-white-50 mb-4">I am a web developer who learns quickly. I've worked on chatbots,
+                        React websites, and WordPress websites. I am keen to gain more experience in the world of
+                        technology, therefore I'm looking for a company willing to offer me a placement amongst them. I
+                        would offer my full commitment and be a pleasant and friendly addition to your team in return!
+                    </p>
                     <a class="btn btn-light btn-xl js-scroll-trigger" href="#portfolio">Check out my work!</a>
                 </div>
             </div>
@@ -75,9 +82,29 @@
             <h2 class="text-center mt-0">Work Experience</h2>
             <hr class="divider my-4" />
             <div class="row">
-                <div>
+                <div className="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                     <h3 className="mb-0"> Frontend Web Developer </h3>
                     <div className="subheading mb-3">Loomo Marketing</div>
+                    <ul>
+                        <li>
+                            Worked alongside a small team delivering multiple projects to clients
+                            simultaneously
+                        </li>
+                        <li>
+                            Building WordPress pages with WooCommerce, Elementor and CSS
+                            according to design flats
+                        </li>
+                        <li>
+                            Participate in weekly scrums to plan sprints according to customer
+                            timelines and expectations
+                        </li>
+                        <li>
+                            Using PHP, updated backend themes for WordPress
+                        </li>
+                        <li>
+                            Completed three large client roll-outs
+                        </li>
+                    </ul>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
