--- a/index.html
+++ b/index.html
@@ -83,34 +83,32 @@
             <hr class="divider my-4" />
             <div class="row">
                 <div className="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-                    <h3 className="mb-0"> Frontend Web Developer </h3>
-                    <div className="subheading mb-3">Loomo Marketing</div>
-                    <ul>
-                        <li>
-                            Worked alongside a small team delivering multiple projects to clients
-                            simultaneously
-                        </li>
-                        <li>
-                            Building WordPress pages with WooCommerce, Elementor and CSS
-                            according to design flats
-                        </li>
-                        <li>
-                            Participate in weekly scrums to plan sprints according to customer
-                            timelines and expectations
-                        </li>
-                        <li>
-                            Using PHP, updated backend themes for WordPress
-                        </li>
-                        <li>
-                            Completed three large client roll-outs
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="mt-5">
-                        <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
-                        <h3 class="h4 mb-2">Up to Date</h3>
-                        <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
+                    <div className="resume-content">
+                        <h3 className="mb-0">FrontEnd Web Developer</h3>
+                        <div className="subheading mb-3">Loomo Marketing</div>
+                        <ul>
+                            <li>
+                                Worked alongside a small team delivering multiple projects to clients
+                                simultaneously
+                            </li>
+                            <li>
+                                Building WordPress pages with WooCommerce, Elementor and CSS
+                                according to design flats
+                            </li>
+                            <li>
+                                Participate in weekly scrums to plan sprints according to customer
+                                timelines and expectations
+                            </li>
+                            <li>
+                                Using PHP, updated backend themes for WordPress
+                            </li>
+                            <li>
+                                Completed three large client roll-outs
+                            </li>
+                        </ul>
+                    </div>
+                    <div className="resume-date text-md-right">
+                        <span className="text-primary">January 2020 - Present</span>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
