--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                     <div className="resume-content">
                         <h3 className="mb-0">FrontEnd Web Developer</h3>
                         <div className="subheading mb-3">Loomo Marketing</div>
+                        <hr class="divider my-2" />
                         <ul>
                             <li>
                                 Worked alongside a small team delivering multiple projects to clients
