--- a/index.html
+++ b/index.html
@@ -82,11 +82,10 @@
             <h2 class="text-center mt-0">Work Experience</h2>
             <hr class="divider my-4" />
             <div class="row">
-                <div className="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-                    <div className="resume-content">
-                        <h3 className="mb-0">FrontEnd Web Developer</h3>
-                        <div className="subheading mb-3">Loomo Marketing</div>
-                        <hr class="divider my-2" />
+                <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="resume-content">
+                        <h3 class="mb-0">FrontEnd Web Developer</h3>
+                        <div class="subheading mb-3" style="margin-bottom: 5px; border-bottom: 1px solid #F9A602">Loomo Marketing</div>
                         <ul>
                             <li>
                                 Worked alongside a small team delivering multiple projects to clients
@@ -108,8 +107,8 @@
                             </li>
                         </ul>
                     </div>
-                    <div className="resume-date text-md-right">
-                        <span className="text-primary">January 2020 - Present</span>
+                    <div class="resume-date text-md-right">
+                        <span class="text-primary">January 2020 - Present</span>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
