--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="resume-content">
                         <h3 class="mb-0">FrontEnd Web Developer</h3>
-                        <div class="subheading mb-3" style="margin-bottom: 5px; border-bottom: 1px solid #F9A602">Loomo Marketing</div>
+                        <div class="subheading mb-3" style="margin-bottom: 5px; border-bottom: 0.2rem solid #F9A602">Loomo Marketing</div>
                         <ul>
                             <li>
                                 Worked alongside a small team delivering multiple projects to clients
