--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             Using PHP, updated backend themes for WordPress
                         </li>
                         <li>
-                            Completed three large client roll-outs
+                            Completed two large client roll-outs
                         </li>
                     </ul>
                 </div>
@@ -111,18 +111,38 @@
                     <span class="text-primary">January 2020 - Present</span>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 text-center">
-                <div class="mt-5">
-                    <i class="fas fa-4x fa-globe text-primary mb-4"></i>
-                    <h3 class="h4 mb-2">Ready to Publish</h3>
-                    <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
+            <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="resume-content">
+                    <h3 class="mb-0">Software Developer</h3>
+                    <div class="subheading mb-3" style="margin-bottom: 5px;">HomerBot</div>
+                    <ul>
+                        <li>
+                            Startup comprised of up to ten people
+                        </li>
+                        <li>
+                            Designed and build chatbots integrated with Slack and Facebook Messenger using javascript
+                            and Azure function apps
+                        </li>
+                        <li>
+                            Developed analytics platform for rental statistics using React
+                        </li>
+                        <li>
+                            Researched, proposed, and implemented database solution using Postgres and Airtable
+                        </li>
+                        <li>
+                            Implemented map search feature using Google maps and TomTom APIs with GeoJSON and PostGIS
+                        </li>
+                        <li>
+                            Mentored four BCIT computer systems and two computer design students for six months
+                        </li>
+                        <li>
+                            Helped host launch events for products and interfaced with multiple parties including
+                            investors to promote products
+                        </li>
+                    </ul>
                 </div>
-            </div>
-            <div class="col-lg-3 col-md-6 text-center">
-                <div class="mt-5">
-                    <i class="fas fa-4x fa-heart text-primary mb-4"></i>
-                    <h3 class="h4 mb-2">Made with Love</h3>
-                    <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
+                <div className="resume-date text-md-right">
+                    <span className="text-primary">November 2018 - January 2020</span>
                 </div>
             </div>
 
