modified 2nd jo

--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
                         </li>
                     </ul>
                 </div>
-                <div className="resume-date text-md-right">
-                    <span className="text-primary">November 2018 - January 2020</span>
+                <div class="resume-date text-md-right">
+                    <span class="text-primary">November 2018 - January 2020</span>
                 </div>
             </div>
 
