added rest of experience

--- a/index.html
+++ b/index.html
@@ -145,7 +145,56 @@
                     <span class="text-primary">November 2018 - January 2020</span>
                 </div>
             </div>
-
+            <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="resume-content">
+                    <h3 class="mb-0">Intro to FrontEnd Development Mentor</h3>
+                    <div class="subheading mb-3" style="margin-bottom: 5px;">Lighthouse Labs</div>
+                    <ul>
+                        <li>
+                          Assisted in teaching 14 students
+                        </li>
+                        <li>
+                          Worked through HTML, CSS, javascript, AJAX, and jquery with group
+                        </li>
+                        <li>
+                          Taught javascript intro lecture to class
+                        </li>
+                      </ul>
+                </div>
+                <div class="resume-date text-md-right">
+                    <span class="text-primary">November 2019 - January 2020</span>
+                </div>
+            </div>
+            <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="resume-content">
+                  <h3 class="mb-0">Medical Transcriptionist</h3>
+                  <div class="subheading mb-3">Brooke Radiology</div>
+                  <ul>
+                    <li>
+                      Transcribed x-ray and ultrasound doctor reports
+                    </li>
+                    <li>
+                      Increased productivity of team by producing twice as many reports as average transcriptionist with minimal errors
+                    </li>
+                    <li>
+                      Typed reports at approximately 90 WPM
+                    </li>
+                  </ul>
+                </div>
+                <div class="resume-date text-md-right">
+                  <span class="text-primary">February 2016 - August 2018</span>
+                </div>
+              </div>
+              <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+                <div class="resume-content">
+                  <h3 class="mb-0">Shift Supervisor</h3>
+                  <div class="subheading mb-3">Starbucks Coffee Company</div>
+                  
+                </div>
+                <div class="resume-date text-md-right">
+                  <span class="text-primary">August 2010 - February 2016</span>
+                </div>
+              </div>
         </div>
     </section>
     <!-- Portfolio-->
