added education section

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#work">Work</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
                 </ul>
             </div>
@@ -151,15 +152,15 @@
                     <div class="subheading mb-3" style="margin-bottom: 5px;">Lighthouse Labs</div>
                     <ul>
                         <li>
-                          Assisted in teaching 14 students
+                            Assisted in teaching 14 students
                         </li>
                         <li>
-                          Worked through HTML, CSS, javascript, AJAX, and jquery with group
+                            Worked through HTML, CSS, javascript, AJAX, and jquery with group
                         </li>
                         <li>
-                          Taught javascript intro lecture to class
+                            Taught javascript intro lecture to class
                         </li>
-                      </ul>
+                    </ul>
                 </div>
                 <div class="resume-date text-md-right">
                     <span class="text-primary">November 2019 - January 2020</span>
@@ -167,34 +168,35 @@
             </div>
             <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                 <div class="resume-content">
-                  <h3 class="mb-0">Medical Transcriptionist</h3>
-                  <div class="subheading mb-3">Brooke Radiology</div>
-                  <ul>
-                    <li>
-                      Transcribed x-ray and ultrasound doctor reports
-                    </li>
-                    <li>
-                      Increased productivity of team by producing twice as many reports as average transcriptionist with minimal errors
-                    </li>
-                    <li>
-                      Typed reports at approximately 90 WPM
-                    </li>
-                  </ul>
+                    <h3 class="mb-0">Medical Transcriptionist</h3>
+                    <div class="subheading mb-3">Brooke Radiology</div>
+                    <ul>
+                        <li>
+                            Transcribed x-ray and ultrasound doctor reports
+                        </li>
+                        <li>
+                            Increased productivity of team by producing twice as many reports as average
+                            transcriptionist with minimal errors
+                        </li>
+                        <li>
+                            Typed reports at approximately 90 WPM
+                        </li>
+                    </ul>
                 </div>
                 <div class="resume-date text-md-right">
-                  <span class="text-primary">February 2016 - August 2018</span>
+                    <span class="text-primary">February 2016 - August 2018</span>
                 </div>
-              </div>
-              <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+            </div>
+            <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
                 <div class="resume-content">
-                  <h3 class="mb-0">Shift Supervisor</h3>
-                  <div class="subheading mb-3">Starbucks Coffee Company</div>
-                  
+                    <h3 class="mb-0">Shift Supervisor</h3>
+                    <div class="subheading mb-3">Starbucks Coffee Company</div>
+
                 </div>
                 <div class="resume-date text-md-right">
-                  <span class="text-primary">August 2010 - February 2016</span>
+                    <span class="text-primary">August 2010 - February 2016</span>
                 </div>
-              </div>
+            </div>
         </div>
     </section>
     <!-- Portfolio-->
@@ -229,6 +231,42 @@
                             <div class="project-name">Project Name</div>
                         </div>
                     </a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Education-->
+    <section class="page-section" id="education">
+        <div class="container">
+            <h2 class="text-center mt-0">Education</h2>
+            <hr class="divider my-4" />
+            <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="resume-content">
+                    <h3 class="mb-0">Lighthouse Labs</h3>
+                    <div class="subheading mb-3">Web Development Bootcamp</div>
+                </div>
+                <div class="resume-date text-md-right">
+                    <span class="text-primary">Graduated November 2018</span>
+                </div>
+            </div>
+
+            <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="resume-content">
+                    <h3 class="mb-0">Vancouver Community College</h3>
+                    <div class="subheading mb-3">Medical Transcriptionist Certificate</div>
+                </div>
+                <div class="resume-date text-md-right">
+                    <span class="text-primary">Graduated November 2014</span>
+                </div>
+            </div>
+
+            <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+                <div class="resume-content">
+                    <h3 class="mb-0">Simon Fraser University</h3>
+                    <div class="subheading mb-3">Health Sciences</div>
+                </div>
+                <div class="resume-date text-md-right">
+                    <span class="text-primary">September 2011 - </span>
                 </div>
             </div>
         </div>
