--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     </section>
     <!-- Portfolio-->
     <section id="portfolio">
-        <h2 class="text-center mt-0"> Projects </h2>
+        <h2 class="text-center mt-0"> Portfolio </h2>
         <hr class="divider my-4" />
         <div class="container-fluid p-0">
             <div class="row no-gutters">
