--- a/index.html
+++ b/index.html
@@ -206,29 +206,26 @@
         <div class="container-fluid p-0">
             <div class="row no-gutters">
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg"><img class="img-fluid"
-                            src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
+                    <a class="portfolio-box" href="https://github.com/maanderz/tinyapp2"><img class="img-fluid"
+                            src="assets/img/tinyApp.png" alt="" />
                         <div class="portfolio-box-caption">
-                            <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">Project Name</div>
+                            <div class="project-name">TinyApp</div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg"><img class="img-fluid"
-                            src="assets/img/portfolio/thumbnails/2.jpg" alt="" />
+                    <a class="portfolio-box" href="https://csb-2zltq.netlify.com/"><img class="img-fluid"
+                            src="assets/img/recipe.png" alt="" />
                         <div class="portfolio-box-caption">
-                            <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">Project Name</div>
+                            <div class="project-name">Recipe Search</div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg"><img class="img-fluid"
-                            src="assets/img/portfolio/thumbnails/3.jpg" alt="" />
+                    <a class="portfolio-box" href="https://csb-hy05x.netlify.com/"><img class="img-fluid"
+                            src="assets/img/notes.png" alt="" />
                         <div class="portfolio-box-caption">
-                            <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">Project Name</div>
+                            <div class="project-name">Notes</div>
                         </div>
                     </a>
                 </div>
