--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
                     <a class="portfolio-box" href="https://github.com/maanderz/tinyapp2"><img class="img-fluid"
                             src="assets/img/tinyApp.png" alt="" />
                         <div class="portfolio-box-caption">
+                            <div class="project-category text-white-50">Category</div>
                             <div class="project-name">TinyApp</div>
                         </div>
                     </a>
@@ -217,6 +218,7 @@
                     <a class="portfolio-box" href="https://csb-2zltq.netlify.com/"><img class="img-fluid"
                             src="assets/img/recipe.png" alt="" />
                         <div class="portfolio-box-caption">
+                            <div class="project-category text-white-50">Category</div>
                             <div class="project-name">Recipe Search</div>
                         </div>
                     </a>
@@ -225,6 +227,7 @@
                     <a class="portfolio-box" href="https://csb-hy05x.netlify.com/"><img class="img-fluid"
                             src="assets/img/notes.png" alt="" />
                         <div class="portfolio-box-caption">
+                            <div class="project-category text-white-50">Category</div>
                             <div class="project-name">Notes</div>
                         </div>
                     </a>
