--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
+                    <a href="http://www.google.ca"> google </a>
                     <a class="portfolio-box" href="https://csb-2zltq.netlify.com/"><img class="img-fluid"
                             src="assets/img/recipe.png" alt="" />
                         <div class="portfolio-box-caption">
