--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         <div class="container-fluid p-0">
             <div class="row no-gutters">
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="https://github.com/maanderz/tinyapp2"><img class="img-fluid"
+                    <a class="portfolio-box" href="https://www.github.com/maanderz/tinyapp2"><img class="img-fluid"
                             src="assets/img/tinyApp.png" alt="" />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Category</div>
@@ -215,7 +215,6 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="http://www.google.ca"> google </a>
                     <a class="portfolio-box" href="https://csb-2zltq.netlify.com/"><img class="img-fluid"
                             src="assets/img/recipe.png" alt="" />
                         <div class="portfolio-box-caption">
