--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         technology, therefore I'm looking for a company willing to offer me a placement amongst them. I
                         would offer my full commitment and be a pleasant and friendly addition to your team in return!
                     </p>
-                    <a class="btn btn-light btn-xl js-scroll-trigger" href="#portfolio">Check out my work!</a>
+                    <a class="btn btn-light btn-xl js-scroll-trigger" href="#portfolio">Check out my work</a>
                 </div>
             </div>
         </div>
@@ -206,7 +206,7 @@
         <div class="container-fluid p-0">
             <div class="row no-gutters">
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="https://www.github.com/maanderz/tinyapp2"><img class="img-fluid"
+                    <a class="portfolio-box" href="https://github.com/maanderz/tinyapp2"><img class="img-fluid"
                             src="assets/img/tinyApp.png" alt="" />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Category</div>
