--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Creative - Start Bootstrap Theme</title>
+    <title>Mandy Aren's Resume</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
@@ -204,7 +204,7 @@
         <h2 class="text-center mt-0"> Portfolio </h2>
         <hr class="divider my-4" />
         <div class="container-fluid p-0">
-            <div class="row no-gutters">
+            <div class="row">
                 <div class="col-lg-4 col-sm-6">
                     <a class="portfolio-box" href="https://github.com/maanderz/tinyapp2"><img class="img-fluid"
                             src="assets/img/tinyApp.png" alt="" />
