--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         <hr class="divider my-4" />
         <div class="container-fluid p-0">
             <div class="row">
-                <div class="col-lg-4 col-sm-6" style="border: 1px solid #F9A602">
+                <div class="col-lg-4 col-sm-6">
                     <a class="portfolio-box" href="https://github.com/maanderz/tinyapp2"><img class="img-fluid"
                             src="assets/img/tinyApp.png" alt="" />
                         <div class="portfolio-box-caption">
@@ -214,7 +214,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6" style="border: 1px solid #F9A602">
+                <div class="col-lg-4 col-sm-6>
                     <a class="portfolio-box" href="https://csb-2zltq.netlify.com/"><img class="img-fluid"
                             src="assets/img/recipe.png" alt="" />
                         <div class="portfolio-box-caption">
@@ -223,7 +223,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6" style="border: 1px solid #F9A602">
+                <div class="col-lg-4 col-sm-6>
                     <a class="portfolio-box" href="https://csb-hy05x.netlify.com/"><img class="img-fluid"
                             src="assets/img/notes.png" alt="" />
                         <div class="portfolio-box-caption">
