--- a/index.html
+++ b/index.html
@@ -214,22 +214,22 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6>
-                    <a class=" portfolio-box" href="https://github.com/maanderz/tinyapp2"><img class="img-fluid"
-                        src="assets/img/tinyApp.png" alt="" />
-                    <div class="portfolio-box-caption">
-                        <div class="project-category text-white-50">Category</div>
-                        <div class="project-name">TinyApp</div>
-                    </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a class="portfolio-box" href="https://github.com/maanderz/tinyapp2"><img class="img-fluid"
+                            src="assets/img/tinyApp.png" alt="" />
+                        <div class="portfolio-box-caption">
+                            <div class="project-category text-white-50">Category</div>
+                            <div class="project-name">TinyApp</div>
+                        </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6>
-                    <a class=" portfolio-box" href="https://github.com/maanderz/tinyapp2"><img class="img-fluid"
-                        src="assets/img/tinyApp.png" alt="" />
-                    <div class="portfolio-box-caption">
-                        <div class="project-category text-white-50">Category</div>
-                        <div class="project-name">TinyApp</div>
-                    </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a class="portfolio-box" href="https://github.com/maanderz/tinyapp2"><img class="img-fluid"
+                            src="assets/img/tinyApp.png" alt="" />
+                        <div class="portfolio-box-caption">
+                            <div class="project-category text-white-50">Category</div>
+                            <div class="project-name">TinyApp</div>
+                        </div>
                     </a>
                 </div>
             </div>
