--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         </div>
     </section>
     <!-- Portfolio-->
-    <section id="portfolio">
+    <section id="portfolio" style="background-color: #F9A602">
         <h2 class="text-center mt-0"> Portfolio </h2>
         <hr class="divider my-4" />
         <div class="container-fluid p-0">
