--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         </div>
     </section>
     <!-- Portfolio-->
-    <section id="portfolio" style="background-color: #F9A602">
+    <section id="portfolio" style="background-color: #F9A602; margin: 20px 0;">
         <h2 class="text-center mt-0"> Portfolio </h2>
         <hr class="divider my-4" />
         <div class="container-fluid p-0">
@@ -215,20 +215,20 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="https://github.com/maanderz/tinyapp2"><img class="img-fluid"
-                            src="assets/img/tinyApp.png" alt="" />
+                    <a class="portfolio-box" href="https://csb-2zltq.netlify.com/"><img class="img-fluid"
+                            src="assets/img/recipe.png" alt="" />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">TinyApp</div>
+                            <div class="project-name">Recipe Search</div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="https://github.com/maanderz/tinyapp2"><img class="img-fluid"
-                            src="assets/img/tinyApp.png" alt="" />
+                    <a class="portfolio-box" href="https://csb-hy05x.netlify.com/"><img class="img-fluid"
+                            src="assets/img/notes.png" alt="" />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">TinyApp</div>
+                            <div class="project-name">Notes App</div>
                         </div>
                     </a>
                 </div>
