changed work section

--- a/index.html
+++ b/index.html
@@ -200,37 +200,35 @@
         </div>
     </section>
     <!-- Portfolio-->
-    <section id="portfolio" style="background-color: #F9A602; padding: 20px 0;">
-        <h2 class="text-center mt-0"> Portfolio </h2>
-        <hr class="divider my-4" />
+    <section id="portfolio">
         <div class="container-fluid p-0">
-            <div class="row">
+            <div class="row no-gutters">
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="https://github.com/maanderz/tinyapp2"><img class="img-fluid"
-                            src="assets/img/tinyApp.png" alt="" />
+                    <a class="portfolio-box" href="https://github.com/maanderz/tinyapp2"
+                        ><img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">TinyApp</div>
-                        </div>
-                    </a>
+                            <div class="project-name">Project Name</div>
+                        </div></a
+                    >
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="https://csb-2zltq.netlify.com/"><img class="img-fluid"
-                            src="assets/img/recipe.png" alt="" />
+                    <a class="portfolio-box" href="https://csb-2zltq.netlify.com/"
+                        ><img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="" />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">Recipe Search</div>
-                        </div>
-                    </a>
+                            <div class="project-name">Project Name</div>
+                        </div></a
+                    >
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="https://csb-hy05x.netlify.com/"><img class="img-fluid"
-                            src="assets/img/notes.png" alt="" />
+                    <a class="portfolio-box" href="https://csb-hy05x.netlify.com/"
+                        ><img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="" />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">Notes App</div>
-                        </div>
-                    </a>
+                            <div class="project-name">Project Name</div>
+                        </div></a
+                    >
                 </div>
             </div>
         </div>
