--- a/index.html
+++ b/index.html
@@ -201,6 +201,8 @@
     </section>
     <!-- Portfolio-->
     <section id="portfolio">
+        <h2 class="text-center mt-0">Portfolio</h2>
+        <hr class="divider my-4" />
         <div class="container-fluid p-0">
             <div class="row no-gutters">
                 <div class="col-lg-4 col-sm-6">
@@ -208,7 +210,7 @@
                         ><img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">Project Name</div>
+                            <div class="project-name">Tiny App</div>
                         </div></a
                     >
                 </div>
@@ -217,7 +219,7 @@
                         ><img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="" />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">Project Name</div>
+                            <div class="project-name">Recipe Search</div>
                         </div></a
                     >
                 </div>
@@ -226,7 +228,7 @@
                         ><img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="" />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">Project Name</div>
+                            <div class="project-name">Take Notes</div>
                         </div></a
                     >
                 </div>
